--- a/lib/css/style.css
+++ b/lib/css/style.css
@@ -641,7 +641,7 @@ ul.social li a i:hover {
 #intro{
 	width:100%;
 	z-index:1;
-	background: url('../images/header.jpg');
+	background: url('../images/header1.jpg');
 	background-position: center top;
     background-repeat: no-repeat;
 	background-attachment: fixed;
@@ -667,14 +667,14 @@ ul.social li a i:hover {
 /* ========================================================== */
 
 h2.countdown_title{
-	color:#fff;
+	color:#2b2b2b;
 	font-size:50px;
 	line-height:50px;
 	text-transform:uppercase;
 }
 
 h3.countdown_subtitle{
-	color:#fff;
+	color:#2b2b2b;
 	font-size:26px;
 	line-height:34px;
 	font-weight:300;
@@ -705,11 +705,11 @@ ul#countdown li {
 	height:90px;
   	text-align: center;
 	vertical-align:middle;
-	border: 2px solid #fff;
+	border: 2px solid #2b2b2b;
 }
 
 ul#countdown::after, ul#countdown::before {
-	background-color: #fff;
+	background-color: #2b2b2b;
 	display: inline-block;
 	vertical-align: middle;
 	content: "";
@@ -722,7 +722,7 @@ ul#countdown li span {
   	font-size: 42px;
 	line-height:42px;
   	font-weight: 700;
-  	color: #fff;
+  	color: #2b2b2b;
   	position: relative;
 }
 
@@ -731,7 +731,7 @@ ul#countdown li p.timeRefHours,
 ul#countdown li p.timeRefMinutes,
 ul#countdown li p.timeRefSeconds {
 	margin-top:3px;
-	color: white;
+	color: #2b2b2b;
   	text-transform: uppercase;
   	font-size: 16px;
 	line-height:16px;
@@ -762,12 +762,12 @@ ul#countdown li p.timeRefSeconds {
 }
 
 .event_box h3{
-	color:#fff;
+	color:#2b2b2b;
 	margin-bottom:0;
 }
 
 .event_box p{
-	color:#fff;
+	color:#2b2b2b;
 }
 
 .event_box i{
@@ -880,7 +880,7 @@ p.event_info span{
 	position:relative;
 	width:100%;
 	z-index:10;
-	background: url('../images/content.jpg');
+	background: url('../images/content1.jpg');
 	background-position: center top;
     background-repeat: no-repeat;
 	background-attachment: fixed;
@@ -1154,7 +1154,7 @@ p.autor span {
 	position:relative;
 	width:100%;
 	z-index:10;
-	background: url('../images/content.jpg');
+	background: url('../images/content1.jpg');
 	background-position: center top;
     background-repeat: no-repeat;
 	background-attachment: fixed;
@@ -1172,7 +1172,7 @@ p.autor span {
 h3.bxslider_title {
 	font-family: Georgia,serif;
 	font-style:italic;
-	color:#fff;
+	color: #2b2b2b;;
 	font-size: 22px;
 	line-height: 34px;
 	font-weight: 300;
@@ -1191,7 +1191,7 @@ span.font_pt_sans{
 }
 
 h3.bxslider_title::after, h3.bxslider_title::before {
-	background-color: #fff;
+	background-color: #2b2b2b;
 	display: inline-block;
 	vertical-align: middle;
 	content: "";
@@ -1201,7 +1201,7 @@ h3.bxslider_title::after, h3.bxslider_title::before {
 }
 
 p.bxslider_text {
-	color:#fff;
+	color:#2b2b2b;
 }
 
 /* ========================================================== */
@@ -1626,7 +1626,7 @@ a.contact_details{
 	ul#countdown li p.timeRefSeconds {
 		font-size: 12px;
 		line-height: 12px;
-		color: white;
+		color: #2b2b2b;
 	}
 		
 	.services_item {
@@ -1656,7 +1656,7 @@ a.contact_details{
 	}
 		
 	.white_box{
-		background-color:#fff;
+		background-color:#2b2b2b;
 		width:90%;
 		padding-top:70px;
 		padding-bottom:30px;
